--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   audioplayers: ^6.5.1
   intl: ^0.20.2
   confetti: ^0.8.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -80,7 +81,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/data/
-    - assets/words/
     - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
