--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = word_learn_app
+PRODUCT_NAME = Word-Le-Earn
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.wordLearnApp
+PRODUCT_BUNDLE_IDENTIFIER = com.wit4you.wordlearn
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
