--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   intl: ^0.20.2
   confetti: ^0.8.0
   url_launcher: ^6.3.2
+  firebase_auth: ^6.1.3
+  cloud_firestore: ^6.1.1
 
 dev_dependencies:
   flutter_test:
