--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   url_launcher: ^6.3.2
   firebase_auth: ^6.1.3
   cloud_firestore: ^6.1.1
+  google_mobile_ads: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -113,12 +114,15 @@ flutter:
   # see https://flutter.dev/to/font-from-package
 
 flutter_launcher_icons:
-  android: true
+  android: "launcher_icon"
   ios: true
-  image_path: "assets/app_icon.jpg"
+  image_path: "assets/icon_original.jpg"
+  min_sdk_android: 21 # Support adaptive icons
+  adaptive_icon_background: "#000000" # Black background to match icon
+  adaptive_icon_foreground: "assets/icon_original.jpg"
   web:
     generate: true
-    image_path: "assets/app_icon.jpg"
+    image_path: "assets/icon_original.jpg"
     background_color: "#ffffff"
     theme_color: "#ffffff"
   windows:
@@ -126,4 +130,4 @@ flutter_launcher_icons:
     icon_size: 48
   macos:
     generate: true
-    image_path: "assets/app_icon.jpg"
+    image_path: "assets/icon_original.jpg"
