--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -28,5 +28,7 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-8206163326690873~1234393061</string>
 </dict>
 </plist>
