--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_auth: ^6.1.3
   cloud_firestore: ^6.1.1
   google_mobile_ads: ^7.0.0
+  hydrated_bloc: ^10.1.1
 
 dev_dependencies:
   flutter_test:
