--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   cloud_firestore: ^6.1.1
   google_mobile_ads: ^7.0.0
   hydrated_bloc: ^10.1.1
+  share_plus: ^7.2.1
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
