add progress table

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,7 @@ app.*.map.json
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
-/android/app/release
+
+# Firebase config
+lib/firebase_options.dart
+build_db_output.txt
