--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/dictionary.db
+    - assets/version.txt
     - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
