--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   hydrated_bloc: ^10.1.1
   share_plus: ^7.2.1
   screenshot: ^3.0.0
+  wakelock_plus: ^1.4.0
 
 dev_dependencies:
   sqflite_common_ffi: ^2.3.4
