--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   equatable: ^2.0.7
   firebase_core: ^4.3.0
   firebase_analytics: ^12.1.0
+  firebase_crashlytics: ^5.0.6
   flutter_tts: ^4.2.3
   shared_preferences: ^2.5.4
   json_annotation: ^4.9.0
@@ -61,6 +62,7 @@ dependencies:
   wakelock_plus: ^1.4.0
   rxdart: ^0.28.0
   google_sign_in: ^6.1.0
+  logger: ^2.4.0
 
 dev_dependencies:
   sqflite_common_ffi: ^2.3.4
